<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swarm_controller</name>
  <version>0.0.0</version>
  <description>Phase 3 multi-drone exploration and observation map utilities</description>
  <maintainer email="loong@outlook.it">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>drone_scanner</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>octomap_rviz_plugins</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>sensor_msgs_py</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
